<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="300dip"
    android:layout_height="380dip"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_dialog_overpay_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="4dp"
            android:text="@string/credit_overpay"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/green_medium" />

        <TextView
            android:id="@+id/tv_dialog_overpay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="4dp"
            android:text="99"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/color_red_main" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_dialog_total_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="2dp"
            android:text="@string/credit_dialog_total"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/green_medium" />
        
        <TextView
            android:id="@+id/tv_dialog_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="2dp"
            android:text="123"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/color_red_main" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    <TextView
        android:id="@+id/tv_dialog_effective_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="2dp"
        android:text="@string/credit_effective"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/green_medium" />

	<TextView
	    android:id="@+id/tv_dialog_effective"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="6dp"
	    android:layout_marginTop="2dp"
	    android:text="35.9"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:textColor="@color/color_red_main" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/dialog_month_number"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:text="@string/credit_dialog_month"
            android:textColor="@color/green_medium" />

        <TextView
            android:id="@+id/dialog_credit_body"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/credit_dialog_body"
            android:textColor="@color/green_medium" />

        <TextView
            android:id="@+id/dialog_credit_from_percents"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/credit_dialog_from_percents"
            android:textColor="@color/green_medium" />

        <TextView
            android:id="@+id/dialog_credit_payment"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:text="@string/credit_dialog_payment"
            android:textColor="@color/green_medium" />
    </LinearLayout>

    <ListView
        android:id="@+id/monthListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dip" >
    </ListView>

</LinearLayout>