<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/content_bubble"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_credit_calculation_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/credit_calculation_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/green_medium" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:background="@color/green_medium" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_credit_sum_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="1dp"
                android:text="@string/credit_sum"
                android:textColor="@color/green_medium" />

            <EditText
                android:id="@+id/et_credit_sum"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:inputType="numberDecimal"
                android:maxLength="8" />

            <TextView
                android:id="@+id/tv_percents_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="1dp"
                android:text="@string/credit_percents"
                android:textColor="@color/green_medium" />

            <EditText
                android:id="@+id/et_percents"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:digits="0123456789.,"
                android:inputType="numberDecimal"
                android:maxLength="5" />

            <TextView
                android:id="@+id/tv_credit_term_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="1dp"
                android:text="@string/credit_term"
                android:textColor="@color/green_medium" />

            <EditText
                android:id="@+id/et_credit_term"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:inputType="numberDecimal"
                android:maxLength="8" />

            <LinearLayout
                android:id="@+id/details_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/content_bubble"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/details_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="5dip"
                        android:padding="4dp"
                        android:text="@string/title_additional"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/green_medium" />

                    <ImageView
                        android:id="@+id/dropdown_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="8dp"
                        android:src="@drawable/dropdown_icon" />
                </RelativeLayout>

                <LinearLayout 
                    android:id="@+id/detais_hiding_ll"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                    android:id="@+id/tv_credit_one_time_comission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="1dp"
                    android:text="@string/credit_one_time_comission"
                    android:textColor="@color/green_medium" />

                <EditText
                    android:id="@+id/et_credit_one_time_comission"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:inputType="numberDecimal"
                    android:maxLength="8" />
                
                <TextView
                    android:id="@+id/tv_credit_monthly_comission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="1dp"
                    android:text="@string/credit_monthly_comission"
                    android:textColor="@color/green_medium" />

                <EditText
                    android:id="@+id/et_credit_monthly_comission"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:inputType="numberDecimal"
                    android:maxLength="8" />
                </LinearLayout>
            </LinearLayout>

            <RadioGroup
                android:id="@+id/radio_group_credit_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radio_button_annuity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:checked="true"
                    android:text="@string/radio_annuity"
                    android:textColor="@color/green_medium" />

                <RadioButton
                    android:id="@+id/radio_button_classic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/radio_classic"
                    android:textColor="@color/green_medium" />
            </RadioGroup>

            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_title_monthly_payout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:text="@string/credit_monthly_payout"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/green_medium" />
            
            <TextView
                android:id="@+id/tv_result_monthly_payout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:text="88"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_red_main" />

            </LinearLayout>

            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_title_overpay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:text="@string/credit_overpay"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/green_medium" />
            
            <TextView
                android:id="@+id/tv_result_overpay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:text="99"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_red_main" />
            
            </LinearLayout>
            
            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_title_effective"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:text="@string/credit_effective"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/green_medium" />
            
            <TextView
                android:id="@+id/tv_result_effective"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:text="99"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_red_main" />
            
            </LinearLayout>

            <Button
                android:id="@+id/button_calculate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/button_calculate"
                android:textColor="@color/green_medium"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/image_cbsb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:src="@drawable/logo_new" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>